@@ -5,6 +5,8 @@ v0.4.2
 * dated conversion fixed
 * minor typo corrections
 * better error printing
+* fixed bug in menu
+* made MainGui more readable
 
 v0.4.1
 * conversion fixed
